--- a/src/components/SinglePastRequest.css
+++ b/src/components/SinglePastRequest.css
@@ -20,3 +20,37 @@
 .past-request:hover{
   background-color: rgba(230, 230, 230, 0.08);
 }
+
+
+.detail-btn {
+  font-family: Verdana;
+  color: #fff;
+  font-weight: bold;
+  border-radius: 8px;
+  background: rgba(0, 0, 0, 1);
+  cursor: pointer;
+  border: none;
+  margin: 0px 0px 15px 0px;
+  box-shadow:  0.5px 2px 5px -0.2px rgba(0, 0, 0, 0.21), 
+   -1.2px 2.1px 2px -0.2px rgba(0, 0, 0, 0.12), 
+   2.2px -2.1px 5px -0.5px rgba(219, 213, 213, 0.25), 
+   2.3px -0.25px 10px -0.2px rgba(43, 43, 43, 0), 
+   2.4px -1px 10px -0.3px rgba(255, 246, 246, 0.09),
+   2.4px 2px 10px -0.3px rgba(255, 246, 246, 0.908);
+}
+
+.detail-btn:hover {
+  background: rgba(0, 0, 0, 0.9);
+  transform: translate(0.15%, 0.15%);
+  transform: scale(1.05, 1.05);
+  box-shadow:  0.5px 2px 5px -0.2px rgba(0, 0, 0, 0.21), 
+   -1.8px 2.1px 2px -0.2px rgba(0, 0, 0, 0.12), 
+   2.2px -2.1px 5px -0.5px rgba(255, 246, 246, 0.908), 
+   2.3px -0.25px 10px -0.2px rgba(43, 43, 43, 0), 
+   2.4px -1px 10px -0.3px rgba(255, 246, 246, 0.09),
+   2.4px 2px 10px -0.3px rgba(219, 213, 213, 0.25);
+}
+.detail-btn:active {
+  background: rgba(0, 0, 0, 0.9);
+  transform: translate(1.25%, 1.25%);
+}
