--- a/src/components/RequestHistory.css
+++ b/src/components/RequestHistory.css
@@ -134,11 +134,47 @@
   color: #fff;
   font-weight: bold;
   border-radius: 8px;
-  background: rgb(136, 245, 85);
+  background: rgba(21, 120, 70, 1);
   cursor: pointer;
   border: none;
+  box-shadow:  0.5px 2px 5px -0.2px rgba(0, 0, 0, 0.21), 
+   -1.2px 2.1px 2px -0.2px rgba(0, 0, 0, 0.12), 
+   2.2px -2.1px 5px -0.5px rgba(219, 213, 213, 0.25), 
+   2.3px -0.25px 10px -0.2px rgba(43, 43, 43, 0), 
+   2.4px -1px 10px -0.3px rgba(255, 246, 246, 0.09),
+   2.4px 2px 10px -0.3px rgba(255, 246, 246, 0.908);
 }
 
 .start-call-btn-accept:hover {
-  background: rgb(136, 245, 85, 0.7)
+  background: rgba(21, 120, 70, 1);
+  transform: translate(0.15%, 0.15%);
+  transform: scale(1.05, 1.05);
+  box-shadow:  0.5px 2px 5px -0.2px rgba(0, 0, 0, 0.21), 
+   -1.8px 2.1px 2px -0.2px rgba(0, 0, 0, 0.12), 
+   2.2px -2.1px 5px -0.5px rgba(255, 246, 246, 0.908), 
+   2.3px -0.25px 10px -0.2px rgba(43, 43, 43, 0), 
+   2.4px -1px 10px -0.3px rgba(255, 246, 246, 0.09),
+   2.4px 2px 10px -0.3px rgba(219, 213, 213, 0.25);
 }
+
+.start-call-btn-accept:active {
+  transform: translate(1.25%, 1.25%);
+  cursor: pointer;
+}
+
+
+.accept-button {
+  font-size: 15px;
+  font-family: Verdana;
+  width: 4.5vw;
+  height: 4vh;
+  color: #fff;
+  font-weight: bold;
+  border-radius: 8px;
+  background: rgba(0, 0, 0, 1);
+  cursor: pointer;
+  border: none;
+  margin: 0px 0px 15px 0px;
+  
+}
+
