--- a/src/Pages/ProfilePage.css
+++ b/src/Pages/ProfilePage.css
@@ -48,6 +48,7 @@
   font-family: "Baloo Bhai 2", cursive;
   font-weight: 800;
   font-size: 18px;
+  cursor: pointer;
 }
 
 #full-name {
@@ -80,7 +81,7 @@
 
 .profile-boxes {
   width: 50vw;
-  background-color: #f5f5f7;
+  background-color: rgba(201, 200, 200, 0.8);
   margin-top: 3vh;
   height: 12vh;
   border-radius: 20px;
@@ -88,6 +89,8 @@
   justify-content: left;
   align-items: center;
 }
+
+
 
 .wrapper-box {
   display: flex;
