--- a/src/components/ProfilePerformanceInfo.css
+++ b/src/components/ProfilePerformanceInfo.css
@@ -23,7 +23,7 @@
 }
 
 .stats-inner-container {
-  background: #f5f5f7;
+  background:rgba(201, 200, 200, 0.8);
   border-radius: 14px;
   display: flex;
   height: 10vh;
