--- a/src/Pages/CreateRequestPage.css
+++ b/src/Pages/CreateRequestPage.css
@@ -50,7 +50,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #F5F5F7;
+  background: rgba(201, 200, 200, 0.8);
 }
 
 
