--- a/src/Pages/LoginPage.css
+++ b/src/Pages/LoginPage.css
@@ -46,6 +46,7 @@
 .login-title {
   font-size: 4rem;
   font-family: "Baloo Bhai";
+  padding: 2%;
 }
 
 .login-about {
@@ -54,14 +55,10 @@
   font-family: 'Roboto', sans-serif;
   font-family: "Baloo Bhai 2";
   font-weight: 200;
-
-
 }
 
 .login-about span {
   font-weight: 800;
-
-
 }
 
 
@@ -151,4 +148,29 @@
 .login__btn:hover {
   background-color: rgba(0, 0, 0, 0.7);
 
+}
+
+@media only screen and (max-width: 1100px) {
+  .login-info-wrapper {
+    flex-direction: column-reverse;
+    height: 100vh;
+
+  }
+
+  .login-wrapper {
+    height: auto;
+  }
+
+  .login-info-wrapper {
+    height: auto;
+  }
+
+  .login-container,
+  .login-info-container {
+    width: 100%;
+  }
+
+  .login__container {
+    width: 100%;
+  }
 }
